--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: publish
     permissions:
       contents: write
       id-token: write
