--- a/packages/strabs-deploy/pyproject.toml
+++ b/packages/strabs-deploy/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "strabs-helm"
+name = "strabs-deploy"
 version = "0.1.0"
-description = "Type-safe interface for Helm chart operations"
+description = "Kubernetes deployment utilities"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = ["strabs-doit", "invoke", "rich", "pyyaml"]
 
 [project.optional-dependencies]
-dev = ["pytest>=9.0", "ruff>=0.14", "mypy>=1.19"]
+dev = ["pytest>=9.0", "ruff>=0.14", "mypy>=1.19", "types-PyYAML"]
 
 [build-system]
 requires = ["hatchling"]
