fix: publish after using workspace

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,8 +82,8 @@ jobs:
           git push origin HEAD:${{ github.ref_name }} --tags
 
       - name: Build
-        run: cd ${{ steps.version.outputs.dir }} && uv build
+        run: uv build --package ${{ inputs.package }}
 
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: ${{ steps.version.outputs.dir }}/dist/
+          packages-dir: dist/
